# v2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
ai_engine/: Dockerfile  requirements.txt
ai_engine/src/: worker.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/components/: ActionList.tsx  AiInsights.tsx  AlertList.tsx  Header.tsx  MetricCard.tsx  ScanList.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/types/: dashboard.ts
responder/: Dockerfile  requirements.txt
responder/src/: responder.py
scanner/: Dockerfile  requirements.txt
scanner/src/: runner.py
