[tool.poetry]
name = "trusted-ai-soc-backend"
version = "0.1.0"
description = "Backend service for Trusted AI SOC Lite"
authors = ["Trusted AI SOC Team <soc@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pytest = "^8.1.1"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "N", "ASYNC", "B", "Q"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
